# dotfiles

./: .gitconfig  .gitignore  .gitmodules  .npmrc  README  README.md  bootstrap.sh  dotlink.toml
.config/QtProject/: Linguist.conf
.config/alacritty/: alacritty.yml
.config/awesome/: README  config.lua  rc.lua
.config/btop/: btop.conf
.config/fish/: config.fish  fish_plugins  fish_variables
.config/fontconfig/: fonts.conf
.config/gitui/: key_bindings.ron
.config/kitty/: kitty.conf
.config/nvim/: README  README.md  init.lua  lazy-lock.json
.config/wezterm/: wezterm.lua
.config/zellij/: config.kdl
.github/workflows/: ansible.yml  test.yml
alacritty/: alacritty.toml  alacritty.yml  colors.toml  colors.yml  cursor.yml  font.toml  font.yml  keymaps.toml  keymaps.yml  other.yml  window.toml  window.yml
bat/: config
fish/: config.fish  fish_plugins  fish_variables  secrets.fish.template
fish/conf.d/: deno.fish
hammerspoon/: init.lua
lazygit/: config.yml
neovide/: config.toml
nvim/: README.md  init.lua  lazy-lock.json
nvim/rs/: Cargo.toml
nvim/rs/src/: lib.rs
nvim/rs/src/configs/: keymaps.rs  mod.rs  settings.rs
sketchybar/: colors.sh  globalstyles.sh  icons.sh  sketchybarrc
sketchybar/items/: apple.sh  battery.sh  datetime.sh  dnd.sh  front_app.sh  music.sh  spacer.sh  spaces.sh  spaces_simple.sh  volume.sh  weather.sh  wifi.sh  yabai.sh
sketchybar/plugins/: app_icon.sh  app_space.sh  app_space_simple.sh  front_app.sh  music.sh  (+3 more)
skhd/: skhdrc
wezterm/: wezterm.lua
xplr/: init.lua
yabai/: yabairc
zellij/: config.kdl
(+423 files in other folders)
